# SText

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/stext/: SText.h  SText_Cocoa.h  SText_GL.h  SText_internal.h
src/SText/: CMakeLists.txt  SText.c  SText_Cocoa.m  SText_GL.c  SText_Glyph.c  SText_Renderer.c  SText_Utils.c
src/SText-Test/: CMakeLists.txt  glad.c  glad.h  khrplatform.h  main.c
